--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -65,4 +65,95 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+} */
+
+:root{
+  --primary-color:rgb(11,181,48) ; 
+  --secondary-color:rgba(36,122,55,0.9);
+  --padding: 0.5rem ; 
+  --transition: all 0.3s ; 
+  --border-radius: 0.6 rem ; 
+  --box-shadow: 0.1 rem 0.2 rem 0.8 rem rgba(205,202,202,0.5) ; 
+
+}
+*{
+  box-sizing: border-box;
+  list-style-type:none; 
+  margin:0 ;
+  outline:none ; 
+  padding: 0 ; 
+  text-decoration: none;
+
+}
+html{
+  srroll-behavior:smooth; 
+}
+img{
+width:100% ; 
+height:auto
+}
+.btn{
+  border:none; 
+  padding:var(--padding) ; 
+  cursor:pointer; 
+  text-transform: uppercase;
+  transition: var(--transition);
+
+}
+.btn:hover{
+  background-color: var(--secondary-color);
+}
+.flex-space-around {
+    display: flex;
+    justify-content: space-around;
+    align-items: center ; 
+}
+.flex-center{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap:0.5rem ;
+}
+.section-title{
+  font-size:2rem;
+  margin-bottom:0.5rem ; 
+}
+.hr-design{
+  margin:0.5rem 0 ; 
+}
+.card{
+  box-shadow: var(--box-shadow);
+  border-radius: var(--border-radius);
+  transition: var(--transition);
+  padding:var(--padding)
+
+}
+.card:hover {
+  box-shadow: 0.1rem 0.2rem 0.8rem rgba(205,202,202,1);
+
+}
+.text-center{
+  text-align: center;
+}
+textarea{
+  resize:none
+}
+
+/*nav starts here */
+nav{
+  background-color: var(--primary-color);
+  padding: 1rem 0;
+  min-height: 10vh;
+}
+.nav_list{
+  gap:1rem ; 
+}
+.nav_link{
+  color:white; 
+  font: size 1.2rem;
+  transition: var(--transition);
+}
+.nav_link:hover{
+  text-decoration: overline;
+  color:black ; 
 }
