--- a/client/src/index.css
+++ b/client/src/index.css
@@ -157,3 +157,42 @@ nav{
   text-decoration: overline;
   color:black ; 
 }
+
+/* main starts here*/
+main{
+  min-height:80vh; 
+}
+
+/* main ends here*/
+
+/*Footer starts here*/
+.footer{
+  padding:1rem ; 
+  min-height:10vh; 
+  background-color: var(--paimary-color);
+  color:white;
+  font-size: 1.1rem;
+  min-height: 10vh;
+  background-color: var(--primary-color);
+}
+.footer_input{
+  border:none ; 
+  padding: var(--padding);
+  width:20rem ; 
+  margin: 100px ;
+}
+.btn-subscribe{
+   padding:0.5rem; 
+  border:none;
+  margin-left:0.5px ; 
+}
+
+/*Footer ends here */
+
+@media(max-width:992px){
+  .flex-center ,.flex-space-around{
+    flex-direction:column;
+    gap:1rem ; 
+    padding:1rem 0 ; 
+  }
+}
